<resources>
    <string name="app_name">Helth</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="show_password">Show Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_page">Login Page</string>
    <string name="Profile">profile</string>
    <string name="home">Home</string>
</resources>