<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/black"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login_page"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/custom_email_input"
        android:drawablePadding="10dp"
        android:textColorHint="@color/grey"
        android:textColor="@android:color/white"
        android:id="@+id/login_email_et"
        android:background="@drawable/custom_input"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:inputType="text"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:drawableStart="@drawable/custom_pass_input"
        android:drawablePadding="10dp"
        android:textColorHint="@color/grey"
        android:textColor="@android:color/white"
        android:id="@+id/login_pass_et"
        android:background="@drawable/custom_input"/>

    <CheckBox
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:buttonTint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="1dp"
        android:id="@+id/login_checkbox"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/login"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New User?"
        android:layout_margin="10sp"
        android:letterSpacing=".4"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/sign_up"
        android:id="@+id/login_to_signup"
        android:textSize="27sp"
        android:layout_marginTop="5dp"/>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar_login"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/white"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:visibility="invisible"
        android:layout_marginTop="20dp"/>

</LinearLayout>